TestSuite/PascalABCTests/errors/err0107.pas
type TDer = class(shortstring)
end;

begin
end.